fixed graph alignment in mobile view

--- a/Frontend/css/styles.css
+++ b/Frontend/css/styles.css
@@ -300,6 +300,7 @@ h2 {
     flex-wrap: wrap;
     width: fit-content;
     padding-top: 10px;
+    margin-left: 17%;
 }
 
 #graph-audio-1 {
@@ -316,7 +317,7 @@ h2 {
 #graph-rpm {
     margin-top: 10px;
     height: 300px;
-    width: 100%;
+    width: 62vw;
 }
 
 #graph-info {
